# HashTreasure

./: .gitignore  package.json  tailwind.config.js  tsconfig.node.json
src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  commands.rs  commands_patch.rs  device.rs  device_id.rs  device_reg.rs  error.rs  heartbeat.rs  main.rs  models.rs
src/components/: Dashboard.tsx  GoldRushParticles.tsx  HashPowerBackground.tsx  Login.tsx  ParticlesBackground.tsx  ThemeToggle.tsx  Withdraw.tsx
src/components/ui/: Progress.tsx  Switch.tsx  Table.tsx  Tag.tsx
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/styles/: theme.css
src/theme/: chartTheme.ts
