# 文件路径: src-tauri/Cargo.toml

[package]
name = "my-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2" # 建议使用较新稳定版，1.88.0 当然可以

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open", "http-all", "window-all"] }

# --- 我们需要添加的核心依赖 ---
# 异步运行时，Tauri 内部依赖它，我们显式添加以使用其宏
tokio = { version = "1", features = ["full"] } 
# HTTP 客户端库，用于调用 API
reqwest = { version = "0.11", features = ["json"] } 
# 错误处理
thiserror = "1.0"
anyhow = "1.0"
# 本地化数据存储插件
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# 日志记录
log = "0.4"
env_logger = "0.10"
# --- 依赖添加结束 ---


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
